updating blog post lfs

--- a/_posts/articles/2017-02-17-git-lfs.md
+++ b/_posts/articles/2017-02-17-git-lfs.md
@@ -4,9 +4,9 @@ title: "Accessing sequence data for reproducible science"
 author: Deren
 modified:
 categories: articles
-excerpt: "I always include SRA accession IDs for archived sequence data
-when I publish a paper, but I rarely use the sra-tools software to access
-the data. Here I learn a bit more about it. "
+excerpt: "SRA accession IDs are typically provided in published papers
+but using the sra-tools software can be a pain. Here I document a few tips
+to remind myself how to use it. "
 comments: true
 image:
   feature: header_ped.png
@@ -15,33 +15,28 @@ tags: [reproducibility, github]
 date: 2017-02-17
 ---
 
-#### Why is it so hard?
+#### What's the holdup?
 Access to data remains a major hurdle to reproducibility in science today
-despite the availability of large-scale repositories for data storage, and
-even journal guidelines requiring data archiving. It is difficult to find
-statistics of just *how often data are not archived* for published studies,
+despite the increased availability of large-scale repositories for data storage, 
+and even journal policies that require data archiving. It is difficult to find
+statistics of just *how often data are not archived* in published studies,
 but guessing from my own experience in attempting to reproduce other published
-studies, it appears very commonplace.
-For example, when assembling a list of studies for a recent meta-analysis I
+studies, it seems quite commonplace.
+<!-- For example, when assembling a list of studies for a recent meta-analysis I
 found that only about half had raw sequence data available in a sequence read
 archive (e.g., SRA, ERA). Data were sometimes available elsewhere,
 in non-indexed locations like DRYAD or personal websites,
-while many others were not available at all.
+while many others were not available at all. -->
 
 There are many reasons for not submitting data to SRA, and if I had to guess,
-for most people it is not for fear of being scooped, or to avoid having their
-work checked, but rather, because uploading data to NCBI is kind of a
-*massively time-consuming and soul-crushing exercise.*
+the reason we often do not submit data is not for fear of being 
+scooped, or to prevent others from reusing our data, but rather, 
+because uploading data to NCBI is a *fairly time-consuming and soul-crushing exercise.*
 It requires entering pages upon pages of metadata by hand into arcane web forms
-to define various objects that are continually referenced by redundant
-names or prefix tags (e.g., SUB, SAMN, SRX, SRP, PRJNA, BioSamples and BioProjects),
-and which have a relational structure that defies understanding
+or spreadsheets to define various objects that are continually referenced by 
+redundant names or prefix tags (e.g., SUB, SAMN, SRX, SRP, PRJNA, BioSamples and BioProjects), and which have a relational structure that defies understanding
 (e.g., 1 SRA can have 4 SRXs which produce data for 96 SRRs from
 96 SRSs for 4 SRPs; See table below).
-And make sure you don't screw anything up along the way, because if you
-enter a wrong term into a form, even before hitting submit, many
-terms cannot be edited, and the submission cannot be deleted -- your only
-recourse seems to be to contact an administrator about correcting it for you.
 
 | Accession Prefix	| Accession Name	|   Definition	   |   Example   |
 |:------------------| :-------------- | :--------------- |:------------|
@@ -54,36 +49,34 @@ recourse seems to be to contact an administrator about correcting it for you.
 
 
 #### Accessing the raw data
-So what are the benefits of having your data in the SRA? Well, believe it or not
-the metadata is useful. But furthermore, having all sequence data archived in a
-uniform way, in a searchable database, is useful because it allows for
-uniform methods to be developed to access the data. For the purpose of
-producing reproducible documentation, then, like a jupyter-notebook that
-lays out all steps in a bioinformatic analysis,
+The distinguishing benefit of having all sequence data archived in SRA, along with
+its metadata, is that we can easily develop a set of uniform scripts to access
+data regardles of it's format, or distribution among samples and lanes of sequencing.
+For the purpose of creating reproducible documentation, then, 
+such as a jupyter-notebook that includes all steps in a bioinformatic analysis,
 a single code block could be written at the beginning of a document to query
-and download all of the sequence data for the project.
+and download all of the sequence data for the project by simply providing the 
+project ID. 
 
 This would be a huge advance over what is commonly available today
 for doing reproducible science, which is typically just a verbal instruction
-to "go get the raw data" before you start. In fact, I would guess that even
-most of the studies with the best reproducible documentation tend to start
-from the point of assuming that the user has properly accessed the data,
-renamed files appropriately, and grouped them into a correct directory
-structure, etc. Instead, the reproducible code should download the data and
-format it for the user so that it is ready for analysis.
+to "go get the raw data" before you start. Even great examples of reproducible 
+science often start from the point of assuming that the user has properly 
+accessed the data, renamed files appropriately, and grouped them into a 
+correct directory structure, etc. 
+Instead, reproducible code should itself include the necessary code 
+to download the data and format so it is ready for downstream analysis.
 
 #### Tools for accessing data
 I've tried to hack my way through the process of accessing data from SRA
-in several recent projects using my own scripts simply because I did not
-like the proprietary software offered by SRA
-([sra-tools](http://ncbi.github.io/sra-tools/)). Until about six months ago
-it really wasn't very easy to install, or even find the software, and so it
-seemed easier to me to just use tools that are available to everyone,
-like `curl`. Fortunately, however, the state of software
-management has changed rapidly in recent years, and now sra-tools is on github,
-and you even install it easily with a simple `conda install` command.
-So I guess I'm back on board with sra-tools now, and so I'm making this post
-while I try to figure out how this thing actually works.
+in several recent projects using my own scripts in an effort to avoid having
+to use the proprietary software offered by SRA
+([sra-tools](http://ncbi.github.io/sra-tools/)), which until a few months ago
+was fairly difficult to install, or even find online, and so it
+seemed easier to simply write `curl` scripts to access the fastq files. 
+Fortunately, however, the state of software management has changed rapidly in recent years, and now sra-tools is on github, and you can even install it easily 
+with a simple `conda install` command. So I decided to give it another look, 
+which is what this post is about. 
 
 #### Getting raw fastq data with sra-tools
 There are two main software packages for accessing data from NCBI/Entrez which
@@ -93,7 +86,7 @@ are now easily available through conda.
 >>> conda install -c bioconda entrez-direct
 ```
 
-The key program provided in `sra-tools` is called `fastq-dump`, which is used
+The key program in `sra-tools` is a tool called `fastq-dump`, which is used
 to download data from SRA, and the main tool in `entrez-tools` is called
 `esearch`, which queries metadata from NCBI. If you wanted to get the data from
 a single Sample Accession (SRR) you can download its fastq data easily with
@@ -107,8 +100,7 @@ If you want to download data for an entire project, however, you'll need to
 query the project metadata using `esearch`. With this you can download all of the
 Run IDs (SRR) under a project Accession ID (SRP; which is the ID typically
 reported in a publication). It just requires a bit of tricky bash scripting.
-If you google around you can find some nice recipes for this, which is what I did to find the
-example which I'll explain below. In this case we use the `esearch` command
+If you google around you can find some nice recipes for this, which is what I did to find the example which I'll explain below. In this case we use the `esearch` command
 to search SRA for all of the information in the project accession we are interested
 in, and then pipe the results into the program `efetch` which is used to parse
 out the runinfo:
@@ -227,11 +219,10 @@ Success!
 
 
 #### Is this the best way to do things?
-For reasonably small sized data sets it does seem like overkill. For example,
-the above data set is relatively small and so we use it as the example
-empirical data set in the [ipyrad documentation](http://ipyrad.rtfd.io). There
-we provide just a simple curl command to download these same files which are
-already named appropriately from a publicly available link:
+I think it depends on your purpose. For reasonably small sized tasks it does seem like overkill to have a large script just to download the data. For example,
+the above data set is used as the example empirical data set in the 
+[ipyrad documentation](http://ipyrad.rtfd.io). Because we want the tutorial to 
+be as simple as possible, we don't want to have to ask users to install special software just to download the data, and then to have to run a complicated script. So in that case we simply ask users to copy and paste the simple curl command below to access the data. 
 
 ```bash
 ## curl grabs the data from a public dropbox url
@@ -241,11 +232,53 @@ already named appropriately from a publicly available link:
 >>> tar -xvzf example_empirical_rad.tar.gz
 ```
 
-The obvious answer is that the `sra-tools` workflow is better, since the data
-are "permanently" archived, but the code certainly does seem a bit
-more complicated, which can scare users away from using it. For example,
-for the ipyrad documentation I'll probably stick with the Dropbox link for now,
-but if I used the data for a published paper I would use the sra-tools
-setup. The more people get used to using the sra-tools, however,
-and become familiar with it, I suppose it'll become less scary and I'd feel
-more comfortable using it more broadly.
+### Additional concerns of fastq-dump
+I think the most annoying aspect of sra-tools is that it downloads intermediate files (in .sra format) and hides them in a somewhat cryptic location. Usually in `/home/user/ncbi/`, a folder which it creates if it does not already exist. And changing the default location of this is a bit complicated. So you'll want to remove the temporary files created in this directory after you are finished. This is especially problematic if you are working on a HPC cluster where you have limited disk space available in your home directory. In that case you will want to download the data directly to a scratch dir. 
+
+### Pythonic implementations
+The large Python module Biopython has tools to perform the same tasks, which can be nice if you are working in a Jupyter-notebook and the rest of your code is written in Python. For example, to download data the same as we did above using Python you could do the following: 
+
+
+```bash
+## conda install -c bioconda biopython
+```
+
+```python
+## import package
+import Bio
+
+## query metainfo
+handle = Bio.Entrez.esearch("SRP021469")
+record = Bio.Entrez.read(handle)
+
+## use a with statement? for handle
+
+## set download location
+## ...
+
+## get files and rename
+Bio.fastq_dump()
+```
+
+### The ipyrad way
+While the biopython implementation can do a huge range of actions having to do with 
+querying data from ncbi, it is fairly complicated and cumbersome if the only task you 
+are interested in is to access nucleotide data, and specifically, RAD-seq data. And 
+so we've implemented a much simpler method for querying and downloading data from sra
+databases in ipyrad. 
+
+```python
+## import ipyrad analysis tools
+import ipyrad.analysis as ipa
+
+## initalize an sratools object
+sra = ipa.sratools(accession="SRP021469", workdir="rawdata")
+
+## view the meta-data accessed by the query
+sra.fetch_runinfo()
+
+## download the data, use force=True to overwrite existing files
+sra.run()
+
+
+```
