--- a/_posts/articles/2017-02-17-git-lfs.md
+++ b/_posts/articles/2017-02-17-git-lfs.md
@@ -15,30 +15,29 @@ tags: [reproducibility, github]
 date: 2017-02-17
 ---
 
-#### What's the holdup?
-Access to data remains a major hurdle to reproducibility in science today
+
+<h1 class="entry-subtitle">Diving into the SRA abyss</h1>
+Access to data remains a major hurdle for reproducibility in science today
 despite the increased availability of large-scale repositories for data storage, 
-and even journal policies that require data archiving. It is difficult to find
-statistics of just *how often data are not archived* in published studies,
-but guessing from my own experience in attempting to reproduce other published
-studies, it seems quite commonplace.
-<!-- For example, when assembling a list of studies for a recent meta-analysis I
-found that only about half had raw sequence data available in a sequence read
-archive (e.g., SRA, ERA). Data were sometimes available elsewhere,
-in non-indexed locations like DRYAD or personal websites,
-while many others were not available at all. -->
+and even journal policies that require data archiving. This is particularly true
+for genomic sequence data, where it can be really confusing to learn how to
+upload large data files (e.g., requiring a checksum and FTP); and how to properly
+tag with them appropriate meta-data. And so typically people just don't do it. 
+Or if they do, the data is uploaded to an archive dump site, like DRYAD, where 
+it is not easily searchable. 
 
-There are many reasons for not submitting data to SRA, and if I had to guess,
-the reason we often do not submit data is not for fear of being 
-scooped, or to prevent others from reusing our data, but rather, 
-because uploading data to NCBI is a *fairly time-consuming and soul-crushing exercise.*
-It requires entering pages upon pages of metadata by hand into arcane web forms
-or spreadsheets to define various objects that are continually referenced by 
-redundant names or prefix tags (e.g., SUB, SAMN, SRX, SRP, PRJNA, BioSamples and BioProjects), and which have a relational structure that defies understanding
+There are many reasons for not submitting data to SRA, but surely the 
+most common reason is because it's a completely *time-consuming and 
+soul-crushing exercise.* It requires entering pages upon pages of meta-data 
+by hand into arcane web forms or spread-sheets to define various 
+objects that are continually referenced by redundant names or prefix tags
+(e.g., SUB, SAMN, SRX, SRP, PRJNA, BioSamples and BioProjects), 
+and which have a relational structure that defies understanding
 (e.g., 1 SRA can have 4 SRXs which produce data for 96 SRRs from
-96 SRSs for 4 SRPs; See table below).
+96 SRSs for 4 SRPs; See table below; which I reference frequently when
+trying to understand this stuff.)
 
-| Accession Prefix	| Accession Name	|   Definition	   |   Example   |
+| Prefix	| Accession Name	|   Definition	   |   Example   |
 |:------------------| :-------------- | :--------------- |:------------|
 | SRX  | *Experiment* | Metadata about library, platform, selection.    | link |
 | SRR  | *Run*        | **The actual sequence data for an experiment**. | link |
@@ -48,39 +47,39 @@ redundant names or prefix tags (e.g., SUB, SAMN, SRX, SRP, PRJNA, BioSamples and
 | SRA  | *Submission* | Metadata of other 5 linked objects.             | link |
 
 
-#### Accessing the raw data
-The distinguishing benefit of having all sequence data archived in SRA, along with
-its metadata, is that we can easily develop a set of uniform scripts to access
-data regardles of it's format, or distribution among samples and lanes of sequencing.
+<h1 class="entry-subtitle" 
+  id="Accessing SRA data" 
+  href="Accessing SRA data">
+  Accessing Data
+</h1>
+The distinguishing benefit of having all sequence data archived in the SRA, 
+with associated metadata, is that we can easily develop uniform scripts to access
+the data regardless of its format or distribution among samples and lanes of sequencing.
 For the purpose of creating reproducible documentation, then, 
-such as a jupyter-notebook that includes all steps in a bioinformatic analysis,
-a single code block could be written at the beginning of a document to query
-and download all of the sequence data for the project by simply providing the 
-project ID. 
+a single code block can be written at the beginning of a document to query
+and download all of the sequence data for a project. This would be a huge advance 
+over what is commonly available today for doing reproducible science, which is 
+typically just a verbal instruction to "go get the raw data" before you start. 
+Even great examples of reproducible science often start from the point of assuming
+that users have properly accessed the data, renamed files, and grouped them into a 
+correct directory structure. Instead, reproducible code should itself include 
+the necessary code to download the data from an online archive ready for 
+downstream analysis.
 
-This would be a huge advance over what is commonly available today
-for doing reproducible science, which is typically just a verbal instruction
-to "go get the raw data" before you start. Even great examples of reproducible 
-science often start from the point of assuming that the user has properly 
-accessed the data, renamed files appropriately, and grouped them into a 
-correct directory structure, etc. 
-Instead, reproducible code should itself include the necessary code 
-to download the data and format so it is ready for downstream analysis.
+<h1 class="entry-subtitle" 
+  id="What about sra-tools" href="What about sra-tools">What about sra-tools?
+</h1>
 
-#### Tools for accessing data
-I've tried to hack my way through the process of accessing data from SRA
-in several recent projects using my own scripts in an effort to avoid having
-to use the proprietary software offered by SRA
-([sra-tools](http://ncbi.github.io/sra-tools/)), which until a few months ago
-was fairly difficult to install, or even find online, and so it
-seemed easier to simply write `curl` scripts to access the fastq files. 
-Fortunately, however, the state of software management has changed rapidly in recent years, and now sra-tools is on github, and you can even install it easily 
-with a simple `conda install` command. So I decided to give it another look, 
-which is what this post is about. 
+NCBI has developed a proprietary tool for accessing the SRA called 
+([sra-tools](http://ncbi.github.io/sra-tools/)).
+Historically, I avoided using it because it was atrociously difficult to access
+and install and I didn't want to have to provide complex installation instructions 
+at the beginning of my documents just so that others could install the software that 
+I was using. *But*, now its 2017, and like any good software the sra-tools 
+package is now available on conda, which makes it easy enough for anyone to use. 
+To install the sra-tools along with another set of tools for searching genome 
+databases (called entrez-tools), simply run the following command with conda.
 
-#### Getting raw fastq data with sra-tools
-There are two main software packages for accessing data from NCBI/Entrez which
-are now easily available through conda.
 ```bash
 >>> conda install -c bioconda sra-tools
 >>> conda install -c bioconda entrez-direct
@@ -88,7 +87,7 @@ are now easily available through conda.
 
 The key program in `sra-tools` is a tool called `fastq-dump`, which is used
 to download data from SRA, and the main tool in `entrez-tools` is called
-`esearch`, which queries metadata from NCBI. If you wanted to get the data from
+`esearch`, which queries meta-data from NCBI. If you wanted to get the data from
 a single Sample Accession (SRR) you can download its fastq data easily with
 `fastq-dump.`:
 
@@ -96,20 +95,19 @@ a single Sample Accession (SRR) you can download its fastq data easily with
 >>> fastq-dump SRR1754715
 ```
 
-If you want to download data for an entire project, however, you'll need to
-query the project metadata using `esearch`. With this you can download all of the
-Run IDs (SRR) under a project Accession ID (SRP; which is the ID typically
-reported in a publication). It just requires a bit of tricky bash scripting.
-If you google around you can find some nice recipes for this, which is what I did to find the example which I'll explain below. In this case we use the `esearch` command
-to search SRA for all of the information in the project accession we are interested
-in, and then pipe the results into the program `efetch` which is used to parse
-out the runinfo:
+If you want to download data for an entire project, however, you need to
+do some complex bash scripting. For example, below we query the "Study
+accession" (SRP) to extract its metadata with `esearch` and from that 
+we extract info using `efetch` to grab the "Run accessions (SRRs)", which we
+could then pass into `fastq-dump` like above. 
+If you google around you can find some nice recipes for this, which is what 
+I did to find the example here. 
 
 ```bash
 >>> esearch -db sra -query SRP021469 | efetch --format runinfo | cut -d ',' -f 1
 ```
 
-The following is printed to stdout:
+The following "Run" accessions are printed to stdout:
 ```yaml
  1
 Run
@@ -128,7 +126,8 @@ SRR1754730
 SRR1754731
 ```
 
-Breaking down the command into smaller bits, you can see what each call is doing
+The following command would download the SRRS as well. 
+Breaking it down into smaller bits, you can see what each call is doing
 before piping to the next:
 
 ```bash
@@ -139,6 +138,11 @@ before piping to the next:
       xargs fastq-dump --gzip               \  ## run fastq-dump on all SRR #s
                        --outdir fastqs/     \  ## gzip compress & put into dir
 ```
+
+<h1 class="entry-subtitle" 
+  id="What about sra-tools" href="What about sra-tools">What about sra-tools?
+</h1>
+
 
 #### Renaming files
 SRA renames the files so that they are named according to their SRR accession
