shortened article shortnames

--- a/_posts/articles/2017-10-17-mobot.md
+++ b/_posts/articles/2017-10-17-mobot.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "First lab outing: 64th Annual Fall Symposium at the Missouri Botanic Garden"
+title: "First lab outing: 64th Annual Fall Symposium at MOBOT"
 author: Deren
 categories: articles
 excerpt: "Presentation at The 64th Annual Fall Symposium"
