separate tabs for news and posts

--- a/_posts/articles/2017-10-17-mobot.md
+++ b/_posts/articles/2017-10-17-mobot.md
@@ -2,7 +2,7 @@
 layout: post
 title: "First lab outing: 64th Annual Fall Symposium at MOBOT"
 author: Deren
-categories: articles
+categories: posts
 excerpt: "Presentation at The 64th Annual Fall Symposium"
 comments: true
 image:
